--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -8,7 +8,7 @@ austrian_sphere:0 "오스트리아 영역권"
 AUS_economy_ready_tooltip:0 "우리는 경제의 선진화를 준비해야 합니다. \n\n 이는 당연히 현재 우리에게 닥친 경제 위기를 극복해야 한다는 것을 의미합니다."
 
 AUS_military_occupation_tooltip:0 "계속해서 헝가리 땅을 점령하게 될 것이지만, 모든 속국들이 이에 만족하지는 않을 것입니다. \n\n"
-AUS_danubian_federation_tooltip:0 ""다뉴브, 알프스 및 아드리아 연맹 "이 형성 될 것입니다. \n\n"
+AUS_danubian_federation_tooltip:0 ""다뉴브, 알프스 및 아드리아 연맹"이 형성 될 것입니다. \n\n"
 AUS_united_states_tooltip:0 ""대 오스트리아 연방"이 형성 될 것입니다. \n\n"
 AUS_dualism_restored_tooltip:0 "헝가리는 통합될것이고, 오스트리아 헝가리 제국이 다시 형성  것입니다. \n\n"
 
@@ -45,18 +45,18 @@ HUN_financial_ties:0 "오스트리아-헝가리의 관계 회복"
 
 AUS_paid_reparations:0 "헝가리의 전쟁 배상금"
 
-AUS_vienna_circle:0 "비엔나 서클"
-AUS_vienna_circle_desc:0 "비엔나 서클은 1924 년 이래 비엔나 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고("Exact Thinking on the Edge of Doom")"입니다."
+AUS_vienna_circle:0 "빈 학파"
+AUS_vienna_circle_desc:0 "빈 학파는 1924 년 이래 빈 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고("Exact Thinking on the Edge of Doom")"입니다."
 
-AUS_vienna_circle-1:0 "비엔나 서클"
-AUS_vienna_circle-1_desc:0 "비엔나 서클은 1924 년 이래 비엔나 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고("Exact Thinking on the Edge of Doom")"입니다."
+AUS_vienna_circle-1:0 "빈 학파"
+AUS_vienna_circle-1_desc:0 "빈 학파는 1924 년 이래 빈 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고("Exact Thinking on the Edge of Doom")"입니다."
 
-austrian_research_name:0 "비엔나 서클"
-austrian_research_desc:0 "비엔나 서클은 1924 년 이래 비엔나 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고(Exact Thinking on the Edge of Doom)"입니다."
+austrian_research_name:0 "빈 학파"
+austrian_research_desc:0 "빈 학파는 1924 년 이래 빈 대학교에서 정기적으로 만난 자연 및 사회 과학, 논리 및 수학에서 파생 된 철학자 및 과학자 그룹입니다. \n\n 그들의 활동 뒤에 숨겨진 핵심 원칙은 "종말의 끝에 대한 정확한 사고(Exact Thinking on the Edge of Doom)"입니다."
 
 AUS_socialist_promises:0 "사회주의자들의 약속"
 
-AUS_divided_society:0 "분할 된 사회"
+AUS_divided_society:0 "분열된 사회"
 AUS_divided_society_desc:0 "인구의 거의 절반이 선거 결과에 만족하지 않고 있습니다."
 
 AUS_ausgleich_success:0 "7차 대타협에서의 성공"
@@ -117,11 +117,11 @@ AUS_skoda_desc:0 "세계대전 기간 동안 프라하의 서쪽에 있는 Škod
 AUS_daimler:0 "Austro Daimler"
 AUS_daimler_desc:0 "Austro Daimler 회사는 우리의 전쟁 수행을 위해 많은 장갑차 및 엔진을 제조했습니다. 독일 자동차와 엔진은 지난 수십 년 동안 시장에 넘쳐 났지만, 포르쉐는 파산 직전에 시달리고 메르세데스-벤츠는 이를 따르고 있습니다. 우리 자동차 산업에 새로운 생명을 불어 넣을 시간입니다."
 
-AUS_vienna_circle_1:0 "비엔나 서클를 공공 단체로 만들다."
-AUS_vienna_circle_1_desc:0 "비엔나 서클 (Vienna Circle)은 과학과 철학 연구의 중심에있는 뛰어난 수학자, 철학자, 자연 과학자들과 비엔나 대학의 가장 뛰어난 지성의 집합체입니다. 우리는 정부 기금을 그들에게 제공 할 것이지만, 그들의 일을 새롭고 좀 더 실용적인 분야로 옮길 것입니다."
+AUS_vienna_circle_1:0 "빈 학파를 공공 단체로 만들다."
+AUS_vienna_circle_1_desc:0 "빈 학파는 과학과 철학 연구의 중심에있는 뛰어난 수학자, 철학자, 자연 과학자들과 비엔나 대학의 가장 뛰어난 지성의 집합체입니다. 우리는 정부 기금을 그들에게 제공 할 것이지만, 그들의 일을 새롭고 좀 더 실용적인 분야로 옮길 것입니다."
 
-AUS_vienna_circle_2:0 "비엔나 서클에 다른이들을 초대하다"
-AUS_vienna_circle_2_desc:0 "비엔나 서클이 잘 설립되었고, 기금을 받고, 국제적으로 인정 받고있는 가운데, 다음 단계는 그곳에서 행해진 연구에 참여하기 위해 외국 왕국과 동맹을 맺도록 초대하는 것입니다."
+AUS_vienna_circle_2:0 "빈 학파에 다른 이들을 초대하다"
+AUS_vienna_circle_2_desc:0 "빈 학파가 잘 설립되었고, 기금을 받고, 국제적으로 인정 받고있는 가운데, 다음 단계는 그곳에서 행해진 연구에 참여하기 위해 외국 왕국과 동맹을 맺도록 초대하는 것입니다."
 
 AUS_suedbahn:0 "Südbahn에 전기를 공급하다."
 AUS_suedbahn_desc:0 "Südbahn (남부 철도)는 그라츠를 경유하여 비엔나에서 라이바흐 및 트리에스테, 오스트리아 - 헝가리 제국의 주요 항구, 그리고 마지막으로 밀라노까지 이어지는 철도입니다. 여전히 주요 교통망이지만 1860년에 완공된 탓에, 트랙이 근대화를 절실히 필요로 하고 있습니다. 전기를 공급하는 것은 비교적 신속하게 진행될 것이며 많은 도움이 될 것입니다."
@@ -632,7 +632,7 @@ austria.21.a:0 "부카레스트에 최후 통첩을 보내라."
 austria.21.b:0 "우리는 더 이상 그 지역이 필요하지 않다."
 
 austria.22.t:0 "트란실바니아의 운명"
-austria.22.d:0 "오늘 우리는 헝가리로부터 해방시킨 트란실바니아의 땅을 돌려 줄 것을 요구받았습니다. 우리가 그들의 과도한 요구를 거부하면 그들은 즉각적인 침략을 시도할것입니다. 우리는 어떻게 대응해야합니까?"
+austria.22.d:0 "오늘 우리는 헝가리로부터 해방시킨 트란실바니아의 땅을 돌려 줄 것을 요구받았습니다. 우리가 그들의 과도한 요구를 거부하면 그들은 즉각적인 침략을 시도할 것입니다. 우리는 어떻게 대응해야 합니까?"
 austria.22.a:0 "받아들여라."
 austria.22.b:0 "전쟁이다."
 
@@ -726,11 +726,11 @@ austria.106.a:0 "하나님 감사합니다."
 #############################
 
 ausgleich.new.100.t:0 "대타협 준비"
-ausgleich.new.100.d:0 "오스트리아와 헝가리 대표단은 1867 년 이래 10 년마다 제국의 양쪽이 외교, 군사 및 재정적 사업을 담당하는 공동 부처에 투자해야하는지에 대해 논의하기 위해 모입니다. \n\n그러나 크로아티아 영토에 대한 손실과 배상 요구로 인해 1927 년 재협상이 중단되어 헝가리는 지난 10 년 동안 재무부에 아무것도 지불하지 못했습니다. \n\n황제의 통치하에있는 헝가리의 국가의 배신은 오스트리아의 당분간 가시였고, 적어도 그들을 우리에게로 데려 오기 위해 몇 가지 노력을 해야합니다."
+ausgleich.new.100.d:0 "오스트리아와 헝가리 대표단은 1867년 이래 10년마다 제국의 양쪽이 외교, 군사 및 재정적 사업을 담당하는 공동 부처에 투자해야 하는 지에 대해 논의하기 위해 모입니다. \n\n그러나 크로아티아 영토에 대한 손실과 배상 요구로 인해 1927년 재협상이 중단되어 헝가리는 지난 10년 동안 재무부에 아무 것도 지불하지 못했습니다. \n\n황제의 통치 하에 있는 헝가리의 배신은 오스트리아에게는 당분간 가시였고, 적어도 그들을 우리에게로 데려 오기 위해 몇 가지 노력을 해야 합니다."
 ausgleich.new.100.a:0 "그들을 공식적으로 초대하라."
 
 ausgleich.new.101.t:0 "대타협에 대한 초대장"
-ausgleich.new.101.d:0 "빈 정부는 우리에게 대타협의 재협상을 요청했습니다. 1867 년부터 헝가리가 빈과 같은 수준에 올랐을 때부터 10 년마다 일어나는 일이지만, 빈에있는 한 남자가 우리에게 크로아티아의 손실을 수용하도록 강요 한 1927 년 우리 나라가 협상장에서 마지막으로 만난 이래로 관계는 껄끄럽습니다."
+ausgleich.new.101.d:0 "빈 정부는 우리에게 대타협 재협상을 요청했습니다. 1867 년부터 헝가리가 빈과 같은 수준에 올랐을 때부터 10년마다 일어나는 일이지만, 빈에 있는 한 남자가 우리에게 크로아티아의 손실을 수용하도록 강요한 1927년 우리 나라가 협상장에서 마지막으로 만난 이래로 관계는 껄끄럽습니다."
 ausgleich.new.101.a:0 "우리는 이 일이 어떻게 흘러가는지 봐야한다."
 
 ausgleich.new.102.t:0 "헝가리는 대타협의 재협상에 참석합니다."
