--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -386,7 +386,7 @@ ott.16.t:0 "쿠르드족 반란"
 ott.16.d:0 "오스만 헌병대가 사태를 진정시키지 못했기 때문에, 쿠르드 족의 폭동은 하루 종일 계속되었다. 술탄에 반항적인 쿠르드 족들은 억압과 자치권 부족에 질려 있었다. 제국의 모든 쿠르드 지역에 걸쳐 열린 폭동이 보도되었다. 이것이 유럽의 병자에게 최후의 일격이 될 수 있을까?"
 ott.16.a:0 "나중에 보자..."
 
-ott.17.t:0 "동쪽으로의 보고서"
+ott.17.t:0 "동쪽에서의 보고서"
 ott.17.d:0 "공개 반란으로 쿠르드족이 살고있는 지역에서 오스만 제국의 안정은 한 번의 성공적인 반란이 아라비아의 주와 주에서 도미노 효과를 일으킬 수 있기 때문에 붕괴 직전에 있습니다. 우리는 이 폭동을 빨리 진압해야 한다."
 ott.17.a:0 "국가의 적들을 쳐부숴라!"
 ott.17.b:0 "아마도 그들은 독립을 누릴 자격이 있을지도 모른다..."
