--- a/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -148,52 +148,52 @@ PLC_moving_fortresses:0 "움직이는 요새"
 PLC_russian_forts:0 "러시아 국경에 요새 건설"
 PLC_holding_our_gains:0 "우르반 병기창 건설"
 PLC_mobilization:0 "동원령"
-PLC_wartime_rations:0 "Economic Rationing"
-PLC_new_tactics:0 "New Army Tactics"
-PLC_army_drills:0 "Army Drills"
-PLC_reforming_high_command:0 "Reforming the High Command"
-PLC_army_designs:0 "New Army Designs"
-PLC_polish_structure:0 "Polish Infrastructure"
-PLC_lithuanian_structure:0 "Lithuanian Infrastructure"
-PLC_polish_monopolies:0 "Polish Corporate Monopolies"
-PLC_polish_farms:0 "Modernise Polish Farming"
-PLC_steel_factories:0 "Steel Factories"
-PLC_tungsten_mining:0 "The Baltic Oil Shelf"
-PLC_urban_districts:0 "New Urban Districts"
-PLC_lithuanian_corporations:0 "Lithuanian Corporations"
-PLC_reform_economy:0 "Emergency Economic Reforms"
-PLC_recover_black_monday:0 "Black Monday Recovery"
-PLC_railways:0 "International Railways"
-PLC_more_railways:0 "Conforming Rail Gauges"
-PLC_military_factories:0 "Military Buildup"
-PLC_combined_infrastructure:0 "Combined Infrastructure"
-PLC_new_economy:0 "A New Civilian Economy"
-PLC_more_military_factories:0 "Wartime Factories"
-PLC_industrial_innovations:0 "Industrial Innovations"
-PLC_poles_in_the_navy:0 "Poles in the Navy"
-PLC_polish_officers:0 "Polish Enthusiasm"
-PLC_lithuanian_experience:0 "Lithuanian Experience"
-PLC_lithuanian_ships:0 "The Lithuanian Fleet"
-PLC_baltic_protection:0 "Protecting the Baltic"
-PLC_atlantic_fleet:0 "An Atlantic Fleet"
-PLC_versatile_fleet:0 "Fleet Versatility"
-PLC_anti_submarines:0 "Anti-Submarine Warfare"
-PLC_naval_bombers:0 "Coastal Bomber Patrols"
-PLC_coastal_forts:0 "Portside Fortifications"
-PLC_garrison_training:0 "Local Garrisons"
-PLC_new_dockyards:0 "New Dockyards"
-PLC_naval_infrastructure:0 "Naval Buildup"
-PLC_naval_academy:0 "A Common Naval Academy"
-PLC_experimental_designs:0 "Experimental Naval Designs"
-PLC_battleships:0 "Battleship Designs"
-PLC_carrier_experiments:0 "Carrier Experiments"
-PLC_marines:0 "Commonwealth Marines"
-PLC_submarine_tactics:0 "Unrestricted Submarine Warfare"
-PLC_trade_interdiction:0 "Atlantic Trade Interdiction"
-PLC_royal_air_force:0 "The Polish Royal Air Force"
-PLC_lithuanian_air_force:0 "The Lithuanian Air Force"
-PLC_tactical_bombers:0 "Tactical Bomber Support"
-PLC_cas:0 "CAS Tactics"
+PLC_wartime_rations:0 "경제적 배급"
+PLC_new_tactics:0 "새로운 육군 전술"
+PLC_army_drills:0 "육군 훈련"
+PLC_reforming_high_command:0 "사령부 개혁"
+PLC_army_designs:0 "새로운 육군 설계"
+PLC_polish_structure:0 "폴란드 기반시설"
+PLC_lithuanian_structure:0 "리투아니아 기반시설"
+PLC_polish_monopolies:0 "폴란드 기업 독점"
+PLC_polish_farms:0 "폴란드 농업 현대화"
+PLC_steel_factories:0 "제철소"
+PLC_tungsten_mining:0 "발트 해 석유 매장지"
+PLC_urban_districts:0 "우르반 공업 지구 신설"
+PLC_lithuanian_corporations:0 "리투아니아 기업"
+PLC_reform_economy:0 "긴급 경제개혁"
+PLC_recover_black_monday:0 "검은 월요일로부터의 회복"
+PLC_railways:0 "국제 철도"
+PLC_more_railways:0 "철도 궤간 통일"
+PLC_military_factories:0 "군비 증강"
+PLC_combined_infrastructure:0 "복합 기반 시설"
+PLC_new_economy:0 "새로운 민영 경제"
+PLC_more_military_factories:0 "전시 공장"
+PLC_industrial_innovations:0 "산업 혁신"
+PLC_poles_in_the_navy:0 "폴란드인 해군"
+PLC_polish_officers:0 "폴란드인들의 열광"
+PLC_lithuanian_experience:0 "리투아니아인들의 노련함"
+PLC_lithuanian_ships:0 "리투아니아 함대"
+PLC_baltic_protection:0 "발트 해 방어"
+PLC_atlantic_fleet:0 "대서양 함대"
+PLC_versatile_fleet:0 "다재다능한 함대"
+PLC_anti_submarines:0 "대잠전"
+PLC_naval_bombers:0 "폭격기 해안 정찰"
+PLC_coastal_forts:0 "해안 요새"
+PLC_garrison_training:0 "현지 주둔군"
+PLC_new_dockyards:0 "새로운 조선소"
+PLC_naval_infrastructure:0 "해군력 증강"
+PLC_naval_academy:0 "연방 해군 사관학교"
+PLC_experimental_designs:0 "실험적 해군 설계"
+PLC_battleships:0 "전함 설계"
+PLC_carrier_experiments:0 "항공모함 실험"
+PLC_marines:0 "연방 해병대"
+PLC_submarine_tactics:0 "무제한 잠수함 작전"
+PLC_trade_interdiction:0 "대서양 무역 차단"
+PLC_royal_air_force:0 "폴란드 왕립 공군"
+PLC_lithuanian_air_force:0 "리투아니아 공군"
+PLC_tactical_bombers:0 "전술 폭격기 지원"
+PLC_cas:0 "근접항공지원(CAS) 전술"
 PLC_radar:0 "New RADAR Stations"
 PLC_paratroopers:0 "The Commonwealth Airborne"
 PLC_fighters:0 "New Fighter Designs"
