--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -1633,7 +1633,7 @@ ire.57.a:0 "Ireland mourns a great poet."
 
 # Black Monday
 ire.228.t:0 "아일랜드에 검은 월요일이 닥치다!"
-ire.228.d:0 "2월 3일, 독일 증권시장이 무너졌고, 세계를 대공황 속으로 깊숙 밀어넣었습니다. 아일랜드는 영국 혁명으로 우리가 공화국을 선포함과 동시에 대영제국과 관계를 끊은 후, 독일과 그 영향권에 있는 국가들의 깊은 영향을 받았습니다. 독일과 다른 유럽의 교역 협력국들의 경제가 타격을 입었듯이, 위기는 아일랜드의 경제에 심각한 영향을 끼쳤습니다. 많은 해결책을 찾기 위한 다툼이 있으며, 대다수의 정당들은 아일랜드의 경제 개발 혹은 독일의 경제가 회복되는 동안 안정을 유지하는 것을 제안했습니다. 더 급진적인 친영 국민중심당은 반독일적 미사여구를 늘어놓으며 대륙 유럽을 버리고 협상국에게 문을 여는 것을 옹호합니다. 또한 생디칼리스트들은 혁명을 옹호하며, 이 문제는 자본주의의 실패에 의해 일어났다고 주장하고 있습니다."
+ire.228.d:0 "2월 3일, 독일 증권시장이 무너졌고, 세계를 대공황 속으로 깊숙이 밀어넣었습니다. 아일랜드는 영국 혁명으로 우리가 공화국을 선포함과 동시에 대영제국과 관계를 끊은 후, 독일과 그 영향권에 있는 국가들의 깊은 영향을 받았습니다. 독일과 다른 유럽의 교역 협력국들의 경제가 타격을 입었듯이, 위기는 아일랜드의 경제에 심각한 영향을 끼쳤습니다. 많은 해결책을 찾기 위한 다툼이 있으며, 대다수의 정당들은 아일랜드의 경제 개발 혹은 독일의 경제가 회복되는 동안 안정을 유지하는 것을 제안했습니다. 더 급진적인 친영 국민중심당은 반독일적 미사여구를 늘어놓으며 대륙 유럽을 버리고 협상국에게 문을 여는 것을 옹호합니다. 또한 생디칼리스트들은 혁명을 옹호하며, 이 문제는 자본주의의 실패에 의해 일어났다고 주장하고 있습니다."
 ire.228.a:0 "This could be bad.."
 ire.229.t:0 "German economy improves"
 ire.229.d:0 "The German government has begun to reform their economy to cope with Black Monday. With their economy improving, trade between our two nations has begun to resume, helping return our economy back to normal."
