--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -1088,7 +1088,7 @@ canada.224.d:0 "몇주간의 집중적인 협상 후에, 아메리카 노동 연
 canada.224.a:0 "우리가 올바른 방향을 선택했기를 바란다."
 
 canada.226.t:0 "Mr. 스탠리 볼드윈 사임"
-canada.226.d:0 "오늘 영국 정계의 혁명 전 영향력 있는 인물이자 영국 정부의 오랜 수상인 스탠리 볼드윈이 에드워드 8세 국왕과의 회담 후에 그의 아내 오를레랑의 이사벨 공주를 이유로 사임했습니다. 수상이 왕의 사랑의 관심사인 종교를 이유로 결혼의 개념에 반대한 것은 사실입니다, 그리고 폐하의 아버지가 1930년 첫번째 남편이 사망한 후 아들이 공주와 결혼하는 것에 동의하지 않았습니다, 왕실과 가까운 소식통에 따르면, 사직하는 진짜 이유는 커즌 경의 정부에 있는 이전 장관들 윈스턴 처칠과 비버브룩 경의 조언을 무시한 새로운 왕 때문이라고 합니다. 에드워드 8세는 사임을 수락했고 오늘 늦게 비버브룩 경을 망명 정부의 새 총리로 임명했습니다."
+canada.226.d:0 "오늘 영국 정계의 혁명 전 영향력 있는 인물이자 영국 정부의 오랜 수상인 스탠리 볼드윈은 왕과 만난 후 집무실에서 사임했는데, 에드워드 8세는 수상에게 자신의 정부인 오를레앙의 이사벨 공주와 결혼할 의사를 알렸습니다. 수상이 왕의 사랑의 관심의 근거로 종교를 이유로 결혼의 개념에 반대한 것은 사실입니다, 그리고 폐하의 아버지가 1930년 아들과 공주의 결혼을 동의하지 않았습니다, 왕실과 가까운 소식통에 따르면, 사직하는 진짜 이유는 커즌 경의 정부에 있는 이전 장관들 윈스턴 처칠과 비버브룩 경의 조언을 무시한 새로운 왕 때문이라고 합니다. 에드워드 8세는 사임을 수락했고 오늘 늦게 비버브룩 경을 망명 정부의 새 총리로 임명했습니다."
 canada.226.a:0 "진정한 권력은 여전히 왕과 수상의 손에 달려 있다"
 
 canada.227.t:0 "왕실 결혼"
