--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -1,27 +1,27 @@
 l_english:
 
 ### Ideas ###
-Held_Elections:0 "Recently Held Elections"
-Held_Elections_desc:0 "The Sejm has recently held public elections, and will not do so for another 4 years."
-Funding_UKR_Partisans:0 "Funding partisans in Poland"
+Held_Elections:0 "최근 치뤄진 선거"
+Held_Elections_desc:0 "대의회가 최근에 총선을 실시했으니, 앞으로 4년 동안은 선거가 없을 것입니다."
+Funding_UKR_Partisans:0 "폴란드의 투자자"
 sell_bucovina:0 "부코비나 매각"
 buy_bucovina:0 "부코비나 매입"
 romanian_oil:0 "루마니아산 석유"
-romanian_oil_to_poland:0 "폴란드에 석유를 보냄"
-POL_opportunism_idea:0 "New Polish Opportunism"
-POL_opportunism_idea_desc:0 "We must always be ready to strike, to take advantage of the turmoil around us so as to ensure Poland comes out on top."
-POL_black_monday:0 "검은 월요일의 효과"
-POL_black_monday_desc:0 "Germany's Black Monday has also affected our country. We have to act."
-POL_black_monday1:0 "검은 월요일의 효과"
-POL_black_monday1_desc:0 "Germany's Black Monday has also affected our country. We have to act."
-POL_eternal_regency:0 "Eternal Regency"
-POL_eternal_regency_desc:0 "Poland's Regency council, initially created to decide upon the new King of Poland, has been bloated and ineffective for almost two decades. The strain this has on the small Polish nation is reaching a breaking point."
-POL_german_advisors:0 "German Advisers"
+romanian_oil_to_poland:0 "폴란드에 석유를 보내다"
+POL_opportunism_idea:0 "새로운 폴란드 기회주의"
+POL_opportunism_idea_desc:0 "우리는 폴란드가 세계의 정상에 오를 수 있도록 항상 우리 주변의 혼란을 이용하여 습격할 준비를 해야 합니다."
+POL_black_monday:0 "검은 월요일의 영향"
+POL_black_monday_desc:0 "독일발 검은 월요일이 우리에게도 영향을 미치기 시작했습니다. 우리는 행동해야만 합니다."
+POL_black_monday1:0 "검은 월요일의 영향"
+POL_black_monday1_desc:0 "독일발 검은 월요일이 우리에게도 영향을 미치기 시작했습니다. 우리는 행동해야만 합니다."
+POL_eternal_regency:0 "영원한 섭정"
+POL_eternal_regency_desc:0 "폴란드의 새로운 왕을 결정하기 위해 처음으로 만들어졌던 폴란드 섭정 협의회는 약 20년간 지나치게 비대해 지고 비효율적이 되었습니다. 이것이 작은 나라인 폴란드에 가하는 부담은 한계에 이르렀습니다."
+POL_german_advisors:0 "독일 고문관들"
 POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisers to modernise our armed forces."
-POL_mathematics_schools:0 "Mathematics Schools"
-POL_mathematics_schools_desc:0 "Funding these schools gives us great benefits in the fields of research and development."
-POL_winged_hussars_idea:0 "Spirit of the Winged Hussars"
-POL_winged_hussars_idea_desc:0 "The Winged Hussars live on in the modern Polish military."
+POL_mathematics_schools:0 "수학 학교"
+POL_mathematics_schools_desc:0 "이과 계열 학교들에 대한 자금 지원은 우리의 연구 개발 분야에서 큰 혜택을 줄 것입니다."
+POL_winged_hussars_idea:0 "윙드 후사르의 후예"
+POL_winged_hussars_idea_desc:0 "윙드 후사르들의 정신은 여전히 현대 폴란드군 안에 살아 숨쉬고 있습니다."
 POL_offensive_force_idea:0 "An Offensive Force"
 POL_offensive_force_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. But it is not enough to merely sit back and watch as our enemies plan around us. It is we who must make the first strike, and destroy our enemies before they can destroy us."
 POL_defensive_tactics_idea:0 "Defensive Tactics"
@@ -30,18 +30,18 @@ POL_assembly_lines_idea:0 "Contemporary Assembly Lines"
 POL_assembly_lines_idea_desc:0 "Assembly lines increase our factory efficiency."
 POL_air_radios_idea:0 "Personal Pilot Radios"
 POL_air_radios_idea_desc:0 "Allowing our pilots to communicate with one another improves their ability to perform complex manoeuvres."
-POL_euro_block_idea:0 "The European Economic Bloc"
-POL_euro_block_idea_desc:0 "Joining Germany's economic bloc serves to strengthen the Polish economy."
+POL_euro_block_idea:0 "유럽 경제 협력체"
+POL_euro_block_idea_desc:0 "독일의 경제 협력체에 참가하는 것은 우리 경제가 부강해지는 데 기여할 것입니다."
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
 POL_an_absolute_monarch_idea_desc:0 "All authority rests in the hands of the monarch."
 POL_centralized_state_idea:0 "A Centralised State"
 POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurting their ability to influence the government."
-POL_a_new_sejm_idea:0 "A New Sejm"
-POL_a_new_sejm_idea_desc:0 "The reformed Sejm is more capable of reacting to new threats and making important decisions."
+POL_a_new_sejm_idea:0 "새로운 폴란드 대의회"
+POL_a_new_sejm_idea_desc:0 "개혁된 대의회(Sejm)는 새로운 위협에 더 유연히 대처하고 합리적인 결정을 내릴 수 있습니다."
 POL_trade_reform_idea:0 "International Trade Reform"
 POL_trade_reform_idea_desc:0 "Reforming our trade policy will keep us competitive in foreign markets."
-POL_poland_forever_idea:0 "Poland Forever"
-POL_poland_forever_idea_desc:0 "Even if the Polish state is lost, her people will never surrender."
+POL_poland_forever_idea:0 "폴란드여 영원하라"
+POL_poland_forever_idea_desc:0 "설령 폴란드가 사라지는 일이 있더라도 폴란드인들은 절대 굴복하지 않을 것입니다."
 POL_spread_revolution_idea:0 "Spreading the Revolution"
 POL_spread_revolution_idea_desc:0 "The revolution must not be stopped by borders, but spread far and wide."
 POL_public_security_idea:0 "The Ministry of Public Security"
