--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -183,10 +183,10 @@ GER_national_populist_party_long:0 "범 독일 연맹"
 ### Focuses ###
 GER_doctrine_new:0 "육군 개혁"
 GER_doctrine_new_desc:0 "한스 폰 젝트의 사망과 아우구스트 폰 마켄젠의 사임으로 참모 총장은 어떤 군사 교리를 채택해야 할 것인가에 대한 뜨거운 논쟁에 휩싸여 왔습니다. 새 교리를 채택하는 것을 감독할 군 장교들의 공정한 위원회를 만들어야 합니다."
-GER_doctrine_great_war:0 "분대 전술"
-GER_doctrine_great_war_desc:0 "혼란에 빠진 중국 내전에 개입함으로써 우리 장교들 사이에 분대 내에서의 역할 분담과 협동의 중요성이 강조되었습니다. 우리는 이른바 '분대 전술(Gruppentaktiken)' 을 보병 훈련 체제에 포함해야 합니다."
-GER_doctrine_great_war_2:0 "현대전의 교훈"
-GER_doctrine_great_war_2_desc:0 "여기 제국군의 장교가 되고자 하는 사람이라면 누구나 읽고자 하는 책 한 권이 있습니다 - '클라우제비츠' '손자병법'. 최고의 군사 이론가들에게 그 주제에 대해서 논의하게 한다면, 그들은 수 세기는 더 된 이 책에서부터 현대전의 요건에 적용할 수 있는 원리를 채택할 것입니다."
+GER_doctrine_great_war:0 "집단 전투"
+GER_doctrine_great_war_desc:0 "혼란에 빠진 중국 내전에 개입함으로써 우리 장교들 사이에 분대 내에서의 역할 분담과 협동의 중요성이 강조되었습니다. 우리는 이른바 '집단 전술(Gruppentaktiken)' 을 보병 훈련 체제에 포함해야 합니다."
+GER_doctrine_great_war_2:0 "현대 전쟁론"
+GER_doctrine_great_war_2_desc:0 "여기 제국군의 장교가 되고자 하는 사람이라면 누구나 읽고자 하는 책 한 권이 있습니다 - 클라우제비츠의 '전쟁론'. 최고의 군사 이론가들에게 여기에 대해서 논의하게 한다면, 그들은 백 여년은 더 된 이 책에서부터 현대전의 요건에 적용할 수 있는 원리를 찾아낼 것입니다."
 GER_doctrine_mobile:0 "차량화 침투"
 GER_doctrine_mobile_desc:0 "우리 군 고위 지휘부는 여러 사안에 대해 하나된 의견을 도출하지 못하였으나, 하나의 사안에는 의견을 모으고 있습니다: 1870년과 1871년 승리를 되돌아봤을 때, 작전 규모에서 신속하고 결정적인 승리는 보병을 집단적으로 차량화함으로써 달성할 수 있다는 것입니다."
 GER_doctrine_mobile_2:0 "새로운 교리"
