--- a/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -90,7 +90,7 @@ PLC_striking_the_balance:0 "새로운 수도"
 PLC_lithuania_first:0 "빌뉴스가 수도입니다"
 PLC_the_new_bureaucracy:0 "관료제 우선"
 PLC_solve_racial_tensions:0 "문화적 갈등 해소"
-PLC_a_unifying_faith:0 "바르샤바 연합 재결성"
+PLC_a_unifying_faith:0 "바르샤바 연맹 재결성"
 PLC_a_new_capital:0 "새로운 수도 건설"
 PLC_expand_vilnius:0 "대성당 재건축"
 PLC_build_warsaw_palace:0 "바르샤바 왕궁 복원"
@@ -194,33 +194,33 @@ PLC_royal_air_force:0 "폴란드 왕립 공군"
 PLC_lithuanian_air_force:0 "리투아니아 공군"
 PLC_tactical_bombers:0 "전술 폭격기 지원"
 PLC_cas:0 "근접항공지원(CAS) 전술"
-PLC_radar:0 "New RADAR Stations"
-PLC_paratroopers:0 "The Commonwealth Airborne"
-PLC_fighters:0 "New Fighter Designs"
-PLC_better_fighters:0 "The Modern Fighter"
-PLC_rocket_experiments:0 "Jet Experimentation"
-PLC_air_tactics:0 "Air Tactics"
-PLC_more_air_tactics:0 "Combined Air Tactics"
-PLC_heavy_fighters:0 "Heavy fighter Designs"
-PLC_strategic_bombers:0 "Death From Above"
+PLC_radar:0 "레이더 기지 신설"
+PLC_paratroopers:0 "연방 공수부대"
+PLC_fighters:0 "새로운 전투기 설계"
+PLC_better_fighters:0 "현대 전투기"
+PLC_rocket_experiments:0 "제트엔진 실험"
+PLC_air_tactics:0 "항공 전술"
+PLC_more_air_tactics:0 "합동 항공 전술"
+PLC_heavy_fighters:0 "중전투기 설계"
+PLC_strategic_bombers:0 "머리 위에서 내리는 죽음"
 
-PLC_poland_first_desc:0 "The new Polish-Lithuanian Commonwealth needs a new capital. Warsaw is the obvious choice, being the historic centre of the old Commonwealth and the largest city in the nation."
-PLC_striking_the_balance_desc:0 "The new Polish-Lithuanian Commonwealth needs a new capital. As choosing either Warsaw or Vilnius as the seat of power would greatly upset half of the nation, perhaps it is a better idea to choose an entirely new city to be the seat of power in the new nation. A symbolic rebirth for all the people of the Commonwealth."
-PLC_lithuania_first_desc:0 "The new Polish-Lithuanian Commonwealth needs a new capital. Vilnius is the obvious choice, being the seat of Mindaugas III and the accepted capital of the nation in Mitteleuropa."
-PLC_the_new_bureaucracy_desc:0 "The bureaucracy of the Commonwealth is struggling to cope with the gargantuan task of integrating the governments of two wholly separate nations. We must put every effort into resolving the issues they face and integrating our two governments as quickly as possible."
-PLC_solve_racial_tensions_desc:0 "Despite our best efforts to the contrary, in the uncertainty of our new nation's birth, a mistrust has formed between the Polish and Lithuanian peoples. We must resolve this at once if we are to move forward as one unified state."
-PLC_a_unifying_faith_desc:0 "The Warsaw Confederation, signed in 1573, was a document that pledged mutual support and tolerance between all religious groups in the union. Re-drafting this historic confederation will have great value both practically and symbolically. Even if we cannot all come together in the politics of our nation, we can find common ground in faith. It is not the end of our troubles, but it is a start."
-PLC_a_new_capital_desc:0 "The new capital contains almost none of the required infrastructure to contain the proper capital of a nation-state. We must rectify this immediately if we are to run the government from this new location."
-PLC_expand_vilnius_desc:0 "Vilnius is as it stands a small city compared to the great seats of power across the globe. We must rebuild the lost Palace of the Grand Dukes of Lithuania, destroyed in 1801, so that it can stand proud among the other capitals of Europe."
-PLC_build_warsaw_palace_desc:0 "The seat of J.K.D. Mendog III, the Royal Castle at Warsaw stands as a representation of our power and opulence. By expanding and improving the Castle, we signal that the new Commonwealth is a nation with the wealth and power to stand among the great powers of our time."
-PLC_sejm_dominance_desc:0 "With the Commonwealth's Sejm based in Warsaw, the Polish have an extensive home-field advantage when the governmental body meets. Exploiting this dominance will allow us to push through every political measure we deem necessary, and reduce the chance of Polish-Lithuanian bipartisanship from grinding our government to a halt."
-PLC_mendog_iii_desc:0 "Mindaugas III of Urach is a symbol of unity and peace that is admired not only inside the nation, but outside it as well. The King as he stands is a powerful symbol for unity, but with a little effort from our Ministry of Propaganda, he could become an almost legendary figure, inspiring our people and soldiers to work harder than ever before."
-PLC_lithuanian_lead_desc:0 "With Vilnius as the capital of the new Commonwealth, and Mindaugas III on the throne, it is time for the Lithuanian people to leverage these advantages and take charge of the nation, and to be the leading force in Commonwealth politics."
-PLC_polish_language_desc:0 "The population disparity between the Polish and Lithuanians is something we can and will exploit. If a vast majority of the citizens in the nation wish to pass laws which happen to favour the Polish over the Lithuanians, who are we to say no? It is what the majority demands."
-PLC_minority_rights_desc:0 "It is not only Polish and Lithuanians who live inside the borders of the Commonwealth, lest we forget. These people, too, are scared of their place inside the new nation, and it is only by including all of the peoples living under our banner that the rifts between us can be mended."
-PLC_decentralization_desc:0 "The initiative to select the Prime Minster of the nation was only the beginning. The people are clamouring for more control over the inner workings of the government, and with how successful the last elections were, it appears that we are taking our first steps towards a more democratic state."
-PLC_centralizing_power_desc:0 "The people of the Commonwealth do not know what their best interests are. Only the upper crust of society can be entrusted to make the important decisions in government."
-PLC_building_the_capital_desc:0 "The capital still requires more construction to be truly great. A new construction initiative will bring many of the capital's services up to the high standard people would expect from a world-class capital city."
+PLC_poland_first_desc:0 "새로운 폴란드-리투아니아 연방은 새로운 수도가 필요합니다. 유서 깊은 옛 연방의 중심지이자 이 나라에서 가장 큰 도시인 바르샤바가 당연한 선택입니다."
+PLC_striking_the_balance_desc:0 "새로운 폴란드-리투아니아 연방은 새로운 수도가 필요합니다. 바르샤바나 빌뉴스 중 하나를 수도로 선택한다면 나머지 한 쪽이 분노할 것이기 때문에, 아마도 완전히 새로운 도시를 새로운 국가의 중심으로 선택하는 것이 좋을지도 모릅니다. 연방의 모든 사람들을 위한 상징적인 부활의 의미로 말이죠."
+PLC_lithuania_first_desc:0 "새로운 폴란드-리투아니아 연방은 새로운 수도가 필요합니다. 민디우가스 3세 폐하가 계시는 곳이자 미텔유로파가 승인한 수도인 빌뉴스가 당연한 선택입니다."
+PLC_the_new_bureaucracy_desc:0 "연방의 관료들은 완전히 다른 두 나라의 정부를 통합하는 거대한 과제에 대처하기 위해 애쓰고 있습니다. 우리는 당장 직면하고 있는 문제들을 해결하고 우리의 두 정부를 가능한 한 빨리 통합하는데 모든 노력을 기울여야 합니다."
+PLC_solve_racial_tensions_desc:0 "우리가 최선을 다했음에도 불구하고, 신생국의 탄생에 대한 불안정 속에서, 폴란드인과 리투아니아인들 사이에 불신이 형성되었습니다. 우리가 단일의 통일된 국가로 도약하려면 당장 이 문제를 해결해야 합니다."
+PLC_a_unifying_faith_desc:0 "1573년에 체결된 바르샤바 연맹은 연맹 내의 모든 종교 집단 간에 상호 지원과 관용을 약속했습니다. 역사적인 이 연맹을 다시 부활시키는 것은, 현실적으로 도움이 될 뿐 아니라 상징적으로도 큰 가치가 있을 것입니다. 우리가 우리 정치에 있어서 모든 의견을 일치할 수는 없더라도, 우리는 신뢰에서 공통점을 찾을 수 있습니다. 이것으로 우리의 문제가 말끔히 해결된 것은 아니지만, 이것은 새로운 출발입니다."
+PLC_a_new_capital_desc:0 "새로운 수도는 국가의 수도로서 적절히 기능하기 위해 필요한 기반이 사실상 아무것도 갖춰지지 않았습니다. 우리가 이 새로운 위치에서 정부를 운영하기 위해서는 이것을 즉시 개선해야만 합니다."
+PLC_expand_vilnius_desc:0 "빌뉴스는 전 세계의 위대한 열강들에 비교하면 작디작은 도시입니다. 우리는 우리 수도가 유럽 열강의 수도들 앞에 당당히 설 수 있도록 1801년에 파괴된 리투아니아 대공궁을 재건해야 합니다."
+PLC_build_warsaw_palace_desc:0 "J.K.D. 민디우가스 3세 폐하가 계시는 바르샤바 왕궁은 우리의 힘과 풍요를 상징하는 곳입니다. 성을 확장하고 보수함으로써, 우리는 새로운 연방이 이 시대의 열강에 포함될 부와 힘을 가진 국가라는 것을 과시할 수 있습니다."
+PLC_sejm_dominance_desc:0 "바르샤바에 위치한 연방 대의회를 대표적으로, 폴란드는 많은 정부 기관이 있다는 이점을 가지고 있습니다. 이러한 우위를 이용해 우리에게 필요한 모든 정책을 추진하고, 폴란드-리투아니아의 협력을 이끌어 우리 정부의 붕괴를 막을 수 있을 것입니다."
+PLC_mendog_iii_desc:0 "우라흐의 민디우가스 3세 폐하는 국내에서뿐만 아니라 국외에서도 존경 받는 통합과 평화의 상징입니다. 현재도 국왕은 통일의 강력한 상징이지만, 그는 우리 선전부에 의해 거의 전설적인 인물이 되어 우리 국민들과 군인들에게 그 어느 때보다 더 열심히 일하도록 격려할 수 있습니다."
+PLC_lithuanian_lead_desc:0 "빌뉴스가 새로운 연방의 수도이고 민디우가스 3세가 왕위에 오른 것과 함께, 이제 리투아니아인들이 이러한 이점들을 이용해 연방의 주도권을 잡을 차례입니다."
+PLC_polish_language_desc:0 "우리는 폴란드와 리투아니아인 사이의 인구 격차를 이용할 수 있습니다. 만약 이 나라 국민의 과반수가 리투아니아인들보다 폴란드인에게 더 많은 혜택을 주는 법을 통과시키고 싶다면, 누가 감히 반대하겠습니까? 이것이 과반수의 의견인데요."
+PLC_minority_rights_desc:0 "폴란드인과 리투아니아인들만 연방 안에 사는 것은 아닙니다. 우리는 잊고 있었지만 소수 민족들도 새로운 국가 안에서 그들의 위치를 걱정하고 있으며, 우리의 기치 아래 사는 모든 사람들을 포함하여 우리 사이의 불화는 해결될 수 있습니다."
+PLC_decentralization_desc:0 "우리의 수상 선출 발의안은 단지 시작일 뿐이었습니다. 국민들은 우리 정부에 대한 더 많은 통제권을 요구하고 있으며, 지난 선거가 얼마나 성공적이었는지와 더불어, 우리가 좀 더 민주적인 국가를 향해 첫 걸음을 내디딘 듯 보입니다."
+PLC_centralizing_power_desc:0 "연방의 국민들은 그들에게 가장 이익이 되는 방법이 무엇인지 모릅니다. 정부에서 중요한 결정을 내리는 것은 사회의 상층부만이 할 수 있는 것입니다."
+PLC_building_the_capital_desc:0 "수도는 여전히 큰 건설 사업이 필요합니다. 새로운 건설 계획은 우리 수도를 세계적인 수준까지 끌어올리는 많은 가능성을 보여 줄 것입니다."
 PLC_vilnius_warsaw_railway_desc:0 "새로운 수도는 연방 내를 돌아다니는 것이 얼마나 어려운 일인지를 보여 주었습니다. 우리 나라의 가장 큰 두 도시를 연결하는 새로운 철도가 생기면 전국의 유동 인구가 크게 늘어날 것입니다."
 PLC_an_absolute_monarch_desc:0 "The collapse of democratic nations around the world has taught us a valuable lesson: rule of the people is a concept doomed to failure. The King's word shall be the final authority on all matters of state."
 PLC_a_smaller_circle_desc:0 "For far too long far too many have had the ear of the king. It is time we cull those with power down to a select few. The more people who have power, the more who will undo the nation to gain more of it."
