--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -258,7 +258,7 @@ FRA_scientific_coop_flag:0 "캠브리지 회의가 열리다.\n"
 phalanstere_research_name:0 "팔랑스테르 인터네셔널"
 phalanstere_research_desc:0 "케임브리지 대학의 회의에서 생디칼리즘 국가들의 기술 발전을 결합하기위한 전 세계 계획의 수립이 결정되었다. 이 계획은 이후 세계의 신디칼주의 정권을 돕는 것을 목표로 한 더 야심찬 계획 인 팔랑스테르 인터내셔널(Phalanstère International)로 진화했다."
 FRA_wip:0 "This focus is not yet implemented. This will never unlock and will have no effect."
-latin_american_union:0 "라틴 아메리카 연방#??"
+latin_american_union:0 "라틴 아메리카 연방" #??"
 FRA_sorelian_economy_tooltip:0 "§YYou will receive 4 infantry divisions in Paris§!\n"
 
 ### Focuses ###
