--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -37,7 +37,7 @@ JAP_narrow_rail_desc:0 "Japan's railways were built using an unusually narrow ga
 japan_NSA_act:0 "국가보안법"
 JAP_COL_PREP:0 "Preparing for Colonisation"
 niigata_riots:0 "니가타 민란"
-JAP_imperial_gov:0 "황국을 위하여!"
+JAP_imperial_gov:0 "제국을 위하여!"
 JAP_DEM_GOV:0 "동양의 민주주의"
 control_faction:0 "Chuuha Faction"
 Fund_Adjustment_Ordinance:0 "The Fund Adjustment Ordinance"
@@ -88,22 +88,22 @@ JAP_MIL_DOC_DEF_idea_1:0 "연락망 강화"
 JAP_MIL_DOC_DEF_idea_2:0 "지휘 체계 통일"
 JAP_MIL_DOC_DEF_idea_3:0 "참모진 개편"
 JAP_MIL_DOC_FIR_idea_1:0 "군 개편"
-JAP_MIL_DOC_FIR_idea_2:0 "Guerrilla Offensives"
+JAP_MIL_DOC_FIR_idea_2:0 "게릴라전"
 JAP_MIL_DOC_MOB_idea_1:0 "압도적 화력"
 JAP_jap_fighter_idea:0 "일본제 전투기"
 JAP_jap_pilot_idea:0 "일본인 조종사"
 JAP_ISO:0 "저무는 해"
 JAP_bad_start:0 "저무는 민주주의"
-JAP_bad_start_desc:0 "Democracy in Japan sits on a knife edge. The political establishment is young; it has only been 50 years since Meiji Restoration. It may not be able to weather the incoming storm."
+JAP_bad_start_desc:0 "일본의 민주주의는 벼랑 끝에 서있습니다. 정치 기관은 어리며 메이지 유신 이후 50년이 지난 지금, 그들은 다가오는 폭풍을 견뎌 내지 못할 수도 있습니다."
 JAP_no_army_focus:0 "분열된 군대"
-JAP_no_army_focus_desc:0 "The Japanese army is lacking in direction, there is infighting in the high command and there is no central military doctrine. All of this will impede any offensive action taken until it is resolved."
+JAP_no_army_focus_desc:0 "일본군은 방향성이 부족하고, 최고 사령부는 내분이 일어나고 있으며, 단일화된 군사 교리도 없습니다. 이러한 문제들은 해결할 때까지 어떠한 전쟁 수행이든지 방해할 것입니다."
 
 ### Tooltips ###
 niigata_focus:0 "The following weeks will determine the course of Japanese history. Choose wisely..."
 JAP_NSA:0 "The National Security Act Passed"
 JAP_NO_NSA:0 "The National Security Act Failed To Pass"
 longest_winter_tool:0 "You can now choose which path Japan will take."
-JAP_longest_winter:0 "The Longest Winter"
+JAP_longest_winter:0 "기나긴 겨울"
 JAP_STRONG_SEIYUKAI:0 "The government has kept its majority"
 emperor_support_agree:0 "The Emperor supported the government"
 emperor_no_support_disagree:0 "The Emperor did not support the government, but political force was used to overcome this"
@@ -173,11 +173,11 @@ JAP_yokuseiha:0 "Yokuseiha Faction"
 JAP_yokuseiha_desc:0 "The Yokuseiha faction is comprised of ex-parliament members with restorationist tendencies. They resist the dictatorial plans set by Konoe for the Taisei Yokusankai and prefer a decentralised approach to restoration."
 JAP_yokuseiha_POL:0 "Separation of Powers"
 JAP_yokuseiha_POL_desc:0 "While supporting imperial restoration the Yokuseiha members also see the problem with absolute power. Partly to prevent corruption and partly to secure their power they arrange a decentralised system for the Taisei Yokusankai."
-JAP_yokuseiha_ECO:0 "A Free Market"
+JAP_yokuseiha_ECO:0 "시장 자유"
 JAP_yokuseiha_ECO_desc:0 "Keeping in line with their decentralised approach the Yokuseiha propose an economic plan consisting of minimal state intervention in the economy. While this would allow groups like the Zaibatsu to gain more power this policy will also endear the regime to them."
 JAP_yokuseiha_AGR:0 "Colonial Investments"
 JAP_yokuseiha_AGR_desc:0 "In response to the agricultural crisis Japan faces the Yokuseiha faction proposes a program of settlement incentives in Japanese mainland colonies in China and elsewhere. By increasing agricultural input from abroad homeland economy could shift to other sectors and supply logistics would be improved."
-JAP_kodoha:0 "Kodoha Faction"
+JAP_kodoha:0 "황도파"
 JAP_kodoha_desc:0 "The Kodoha faction is made up of restorationist army generals and officers who wish to bring Japan back to its folkist roots and create a strong imperial power at the head of the state."
 JAP_kodoha_POL:0 "Imperial Power"
 JAP_kodoha_POL_desc:0 "The Kodoha faction resists Konoe's efforts in creating a separate dictatorial power from the imperial court and instead wish to transfer ultimate power to the emperor in a form of absolutism where the Taisei Yokusankai is a subject of the emperor."
@@ -187,7 +187,7 @@ JAP_kodoha_AGR:0 "Land Reform"
 JAP_kodoha_AGR_desc:0 "The revolutionary part of the Kodoha faction shows itself in their radical plan of land redistribution. The Kodoha leadership believes drawing a plan for national land reform will solve both the agricultural crisis and the rise of syndicalism."
 JAP_kakushinha:0 "Kakushinha Faction"
 JAP_kakushinha_desc:0 "The Kakushinha, or reform faction, is led by prince Konoe and is mainly comprised of intellectuals and politicians and aims for a reconstruction of the Japanese political system with an absolute Taisei Yokusankai at the core of Japanese society."
-JAP_kakushinha_POL:0 "A New System"
+JAP_kakushinha_POL:0 "새로운 체계"
 JAP_kakushinha_POL_desc:0 "The political plan of the Kakushinha faction was to create a single centralised political body which will combine the executive, legislative and administrative powers of the Japanese empire. Despite heavy resistance the reformists' domination of the first convention allowed them to pull through with the reforms."
 JAP_kakushinha_ECO:0 "Bureaucratic Regulation"
 JAP_kakushinha_ECO_desc:0 "The Kakushinha faction's economic policy involves creating a bureaucratic system to regulate the economy as part of the Taisei Yokusankai."
