--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -13,7 +13,7 @@ rus_fulfilled_strike_general_malus:0 "노동자의 권익이 확대되었다."
 zemstvo_support:0 "젬스트보의 지원"
 village_surplus:0 "공동생산잉여"
 project_exeeded:0 "예상된 제한을 넘어서다."
-RUS_Faith_disc:0 "National debates on religious matters"
+RUS_Faith_disc:0 "종교적 문제에 대한 국가적인 논쟁"
 
 ### Events ###
 rusd.1.t:0 "정치적 폭탄"
@@ -27,29 +27,29 @@ rusd.3.t:0 "폭탄 테러의 실패"
 rusd.3.d:0 "무정부주의자, 사회주의자, 생디칼리스트, 볼셰비키들은 우리 조국의 안보를 약화시키고 있습니다. 최근에 그들은 러시아의 주요 도시 중 한 곳에 암살자를 보내 저명한 정부 대리인을 암살하려하여 도시에 혼란을 일으켰습니다. 다행히 폭탄을 일찍 터져 적은 수의 사람만이 사망하였습니다."
 
 rusd.4.t:0 "농민들의 불안"
-rusd.4.d:0 "Throughout Russian history the peasants' living conditions has always been hard, even during periods of peace and prosperity. Even the emancipation reforms of 1861, which led to the abolition of serfdom, did not improve the situation all that much. Local peasant protests against their grim position, as well as landowners' illegal actions, were common."
+rusd.4.d:0 "러시아 역사를 통틀어 소작농들의 생활 조건은 평화롭고 번영하는 시기에도 항상 가혹했습니다. 농노제를 폐지하도록 한 1861년의 해방개혁은 상황을 별반 개선하지 못했습니다. 소작농들은 지주들의 불법행위는 물론이고 그들의 암울한 상황에 대해 대항하는 일이 흔히 있었습니다."
 rusd.4.a:0 "오 이럴수가..."
 
-rusd.5.t:0 "Agitation in the Countryside"
-rusd.5.d:0 "With the situation in the countryside growing increasingly unstable the peasants became easy to influence by various agitators. One such situation has recently taken place; a charismatic activist visited a number of villages calling for open revolt against our regime. How should we react to this potential threat?"
-rusd.5.a:0 "Let him agitate, we have more important business."
-rusd.5.b:0 "Eliminate the agitator!"
+rusd.5.t:0 "농촌에서의 동요"
+rusd.5.d:0 "농촌지역의 증가하는 불안에 따라 농부들이 다양한 선동가들에게 더 많은 영향을 받고 있습니다. 최근 한 카리스마 넘치는 선동가가 여러 마을을 돌며 우리 정권에 대한 반란을 촉구하고 있습니다. 우리는 이 잠재적인 위험에 어떻게 대처해야 할까요?"
+rusd.5.a:0 "그가 선동하게 놔둔다. 우리에겐 더 중요한 사안이 있다."
+rusd.5.b:0 "선동가를 제거한다!"
 
-rusd.6.t:0 "Major Peasant Unrest"
-rusd.6.d:0 "Agitated by various groups, the impoverished peasantry has risen up. The local administration is powerless against the mob and it seems that the only way to solve the crisis is to use force. Alternatively we can always attempt to negotiate, although satisfying the peasants' demands may turn out to be quite expensive."
-rusd.6.a:0 "Send the army to eliminate the threat!"
-rusd.6.b:0 "Attempt to negotiate and fulfil some of their demands."
-rusd.6.c:0 "Fully agree to the peasants' demands."
+rusd.6.t:0 "주요 농민 폭동"
+rusd.6.d:0 "여러 단체에게 선동당함으로써, 가난한 소작농들이 일어났습니다. 지방정부는 폭도들의 대한 통제력을 모두 잃었고, 문제를 해결할 유일한 방법은 군대를 사용하는 것으로 보입니다. 대안적으로 우리는 협상을 시도해볼 수 있습니다, 소작농들의 요구를 채워주는 것은 꽤나 값 비싸겠지만요."
+rusd.6.a:0 "군대를 보내 위협을 제거하라!"
+rusd.6.b:0 "협상을 시도해 그들의 요구 사항 중 일부를 이행하라"
+rusd.6.c:0 "농민들의 요구의 전적으로 동의한다"
 
-rusd.7.t:0 "Workers' Demonstrations"
-rusd.7.d:0 "Even though technological advancement resulted in a slow but steady improvement of working conditions, the workers remained very vulnerable to Socialist agitation. Demonstrations in cities were organised from time to time, their demands varying depending on who was pulling the strings."
-rusd.7.a:0 "Oh well..."
+rusd.7.t:0 "노동자 시위"
+rusd.7.d:0 "기술발전으로 근무 환경이 점진적으로 좋아지고 있음에도 불구하고, 노동자들은 사회주의 선동에 여전히 매우 취약합니다. 때때로 도시에서 시위가 조직되었습니다. 그들의 요구는 누가 주도권을 쥐고 있는지에 따라 다릅니다."
+rusd.7.a:0 "오, 그럼..."
 
-rusd.8.t:0 "Workers' Strike"
-rusd.8.d:0 "Some workers in one of our cities have organised themselves and began to strike, completely disrupting all industrial production within the city. They demand higher salaries and enforcement of labour regulations preventing unfair treatment of the workforce."
-rusd.8.a:0 "Fulfil their demands."
-rusd.8.b:0 "Ignore their demands."
-rusd.8.c:0 "Send in the army to pacify them!"
+rusd.8.t:0 "노동자 파업"
+rusd.8.d:0 "우리 도시들 중 한 곳의 몇몇 노동자들이 조직하고 파업하여, 도시의 모든 산업생산을 방해하고 있습니다. 그들은 더 높은 급여와 노동자들의 불공정한 대우를 막는 노동법 시행을 요구합니다."
+rusd.8.a:0 "그들의 요구를 들어줘라."
+rusd.8.b:0 "그들의 요구를 무시해라."
+rusd.8.c:0 "군대를 보내 그들을 진정시켜라!"
 
 rusd.9.t:0 "Negotiating with the Strikers"
 rusd.9.d:0 "An attempt to negotiate with the striking workers has been made. All political forces in the country closely watch the meeting, and some are hoping that the strike will become an impulse for further reforms in Russia."
